src/css/component.media-object.css
.media-object {
  @apply flex flex-wrap -m-2;
}

.media-object__media,
.media-object__text {
  @apply p-2;
  @apply flex justify-center;
}

.media-object__media {
  /* Else, Safari the media (img, svg,...) height extends */
  @apply flex items-start;
  flex-basis: content;
  flex-grow: 1;
}

.media-object__text {
  flex-basis: 0;
  flex-grow: 999;
  min-width: 50%;
}

.media-object--roomy {
  @apply -m-4;

  & .media-object__media,
  & .media-object__text {
    @apply p-4;
  }
}

.media-object--no-stretch {
  @apply items-start;
}

